[gd_scene load_steps=9 format=3 uid="uid://b86hrtmfbwl50"]

[ext_resource type="Script" path="res://Game/main.gd" id="1_66rgv"]
[ext_resource type="PackedScene" uid="uid://c1wd138ka86xp" path="res://Game/Level/Map.tscn" id="2_80g8p"]
[ext_resource type="Script" path="res://Game/PathSpawner.gd" id="3_18eh6"]
[ext_resource type="PackedScene" uid="uid://b66kvas3htwn7" path="res://Game/Defense/Turm1/Standard-Tower.tscn" id="3_f3vnp"]
[ext_resource type="PackedScene" uid="uid://dbyjqrpe10lgi" path="res://Game/UI/pause_menu/pause_menu.tscn" id="5_1yo3r"]
[ext_resource type="PackedScene" uid="uid://ccx0k6v5pltrp" path="res://Game/Defense/Turm2/advancedtower.tscn" id="5_lv0t5"]
[ext_resource type="Script" path="res://Game/UI/Kaufmenu/Buttons.gd" id="7_rqprl"]
[ext_resource type="Texture2D" uid="uid://dse4b2vaddkji" path="res://icon.svg" id="9_2eljx"]

[node name="Main" type="Node2D"]
script = ExtResource("1_66rgv")

[node name="Map" parent="." instance=ExtResource("2_80g8p")]

[node name="PathSpawner" type="Node2D" parent="."]
script = ExtResource("3_18eh6")

[node name="Timer" type="Timer" parent="PathSpawner"]
wait_time = 5.0
autostart = true

[node name="Towers" type="Node2D" parent="."]

[node name="Standard-Tower" parent="Towers" instance=ExtResource("3_f3vnp")]
position = Vector2(132, 540)

[node name="advancedtower" parent="Towers" instance=ExtResource("5_lv0t5")]
position = Vector2(118, 319)

[node name="pauseMenu" parent="." instance=ExtResource("5_1yo3r")]
visible = false
offset_left = 586.0
offset_top = 311.0
offset_right = 586.0
offset_bottom = 311.0

[node name="Buttons" type="Node2D" parent="."]
script = ExtResource("7_rqprl")

[node name="Button" type="Button" parent="Buttons"]
show_behind_parent = true
offset_left = 245.0
offset_top = 533.0
offset_right = 396.0
offset_bottom = 620.0

[node name="UI" type="CanvasLayer" parent="Buttons"]
visible = false

[node name="Panel" type="Panel" parent="Buttons/UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -276.0
offset_top = -119.0
offset_right = 276.0
offset_bottom = 119.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button Tower 1" type="Button" parent="Buttons/UI/Panel"]
layout_mode = 0
offset_left = 36.0
offset_top = 35.0
offset_right = 172.0
offset_bottom = 171.0
icon = ExtResource("9_2eljx")

[node name="Button Tower 2" type="Button" parent="Buttons/UI/Panel"]
layout_mode = 0
offset_left = 346.0
offset_top = 53.0
offset_right = 482.0
offset_bottom = 189.0
icon = ExtResource("9_2eljx")

[connection signal="timeout" from="PathSpawner/Timer" to="PathSpawner" method="_on_timer_timeout"]
[connection signal="pressed" from="Buttons/Button" to="Buttons" method="_on_button_pressed"]
[connection signal="pressed" from="Buttons/UI/Panel/Button Tower 1" to="Buttons" method="_on_button_tower_1_pressed"]
[connection signal="pressed" from="Buttons/UI/Panel/Button Tower 2" to="Buttons" method="_on_button_tower_2_pressed"]
